--- a/typing_test/index.html
+++ b/typing_test/index.html
@@ -4,6 +4,7 @@
     <title>Real Words Typing Test</title>
     <link rel="stylesheet" href="style.css">
     <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.8.2/angular.min.js"></script>
+    <script src="config.js"></script>
     <script src="app.js"></script>
 </head>
 <body ng-controller="TypingController as tc" ng-keydown="tc.handleKey($event)" tabindex="0">
