--- a/typing_test/index.html
+++ b/typing_test/index.html
@@ -70,8 +70,8 @@
         </p>
         <p class="thank-you-message" style="font-size: 0.9em; margin-top: 20px;">
           <span ng-show="tc.saveStatus === 'saving'">📜 Recording in the Oracle's scrolls...</span>
-          <span ng-show="tc.saveStatus === 'success'">✅ Your results have been recorded in the Oracle's scrolls!</span>
-          <span ng-show="tc.saveStatus === 'error'">⚠️ Could not save to Oracle's scrolls, but your glory remains!</span>
+          <span ng-show="tc.saveStatus === 'success'"> Your results have been recorded in the Oracle's scrolls!</span>
+          <span ng-show="tc.saveStatus === 'error'"> Could not save to Oracle's scrolls, but your glory remains!</span>
         </p>
       </div>
     </div>
